# text-from-image

./: Cargo.toml  README.md
src/: Field.py  FieldItem.py  GraphicsView.py  ImageItem.py  ImageView.py  RecognizedView.py  clone.rs  denormalize_rect.py  main.py  main.rs
ui/: window.ui
