[package]
name = "text-from-image"
version = "0.1.0"
authors = ["Heliconter", "AlexRyzhickov"]
edition = "2018"

[dependencies]
gtk = { version = "0.9", features = ["v3_20"]}
gio = { version = "", features = ["v2_44"]}
glib = ""
leptess = "0.11.0"

[profile.dev]
debug = 0 

[profile.release]
lto = true
